<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">



<RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"

    android:padding="16dp"
    tools:context=".AnteiaSDKMainActivity">
    <ImageView

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ualet_icon" />

    <LinearLayout
        android:id="@+id/terms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_person_black_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_fingerprint_black_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerprint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_camera_black_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_location_on_black_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_mic_black_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/tos"
                android:textColor="@color/gray" />
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/buttons_relative_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <Button

            android:layout_width="wrap_content"
            android:text="@string/reject"
            android:id="@+id/rejectButton"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:textColor="@color/gray"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:background="@drawable/button_background"
            android:id="@+id/acceptButton"
            android:layout_alignParentEnd="true"
            android:paddingEnd="@dimen/buttons_padding"
            android:paddingStart="@dimen/buttons_padding"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        app:lottie_rawRes="@raw/loading_spinner"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
</RelativeLayout>
</layout>