<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="co.anteia.anteiasdk.viewModel.ConfirmPhoneViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/outter_layout_padding"
        android:layout_height="match_parent"
        tools:context=".ui.ConfirmPhoneFragment">

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/smartphone"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_below="@id/icon_view"
            android:id="@+id/check_your_sms_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_text"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/activation" />

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/enter_sms_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_the_code" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_below="@id/enter_sms_code_tv"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerInParent="true"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/code"
                android:id="@+id/otpTb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel.code}" />
        </com.google.android.material.textfield.TextInputLayout>



        <RelativeLayout
            android:id="@+id/bottom_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_above="@id/resend_otp_mobile_tv"
            android:layout_marginBottom="20dp">


            <Button
                android:layout_alignParentEnd="true"
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/buttons_padding"
                android:paddingEnd="@dimen/buttons_padding"
                android:background="@drawable/button_background"
                android:text="@string/confirm"
                android:textColor="@color/white" />
            <Button
                android:layout_alignParentStart="true"
                android:id="@+id/modify_phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/modify_phone"
                android:textColor="@color/purple" />

        </RelativeLayout>

        <TextView
            android:id="@+id/resend_otp_mobile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/resend_otp"
            android:textColor="@color/purple" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:visibility="invisible"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            app:lottie_rawRes="@raw/loading_spinner"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

    </RelativeLayout>
</layout>