<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/outter_layout_padding"
        android:layout_height="match_parent"
        tools:context=".ui.dataentry.DataEntryFragment">

        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/email"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_below="@id/icon_view"
            android:id="@+id/check_your_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_text"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/check_your_email" />

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/check_email_folder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/check_for_email" />


            <RelativeLayout
                android:layout_above="@id/resend_email_tv"
                android:id="@+id/email_linear_layout"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:layout_height="wrap_content">

                <Button
                    android:layout_alignParentEnd="true"
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:text="@string/confirm"
                    android:paddingStart="@dimen/buttons_padding"
                    android:paddingEnd="@dimen/buttons_padding"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/modify_email"
                    android:id="@+id/modify_email_button"
                    android:background="@android:color/transparent"
                    android:textColor="@color/purple"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/resend_email_tv"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"

                android:layout_width="wrap_content"
                android:text="@string/resend_email"
                android:textColor="@color/purple"
                android:layout_height="wrap_content"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:visibility="invisible"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            app:lottie_rawRes="@raw/loading_spinner"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>



    </RelativeLayout>
</layout>