<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="co.anteia.anteiasdk.viewModel.CreatePasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="@dimen/outter_layout_padding"
        android:layout_height="match_parent"
        tools:context=".ui.dataentry.DataEntryFragment">

        <TextView
            android:id="@+id/create_your_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/create_your_password" />
        <TextView
            android:id="@+id/input_data_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@id/create_your_password_tv"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/password_instructions" />

        <LinearLayout
            android:id="@+id/input_data_linear_layout"
            android:layout_marginTop="40dp"
            android:layout_below="@id/input_data_message_tv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:errorEnabled="true"
                app:error="@{viewModel.errorPassword}"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/password_tv"
                android:text="@={viewModel.password}"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/password_confirm_tv"
                app:errorEnabled="true"
                app:error="@{viewModel.errorPasswordConfirm}"
                app:boxBackgroundColor="@color/white"
                app:passwordToggleEnabled="true"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/confirm_password"
                android:text="@={viewModel.passwordConfirm}"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:paddingStart="@dimen/buttons_padding"
            android:paddingEnd="@dimen/buttons_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.valid}"
            android:id="@+id/next_button"
            android:background="@drawable/button_background" />


    </RelativeLayout>
</layout>